--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <script>
       // Task 1
 
-      //   alert("Enter your age");
-      //   let age = prompt("What is your age?");
+         alert("Enter your age");
+        let age = prompt("What is your age?");
 
-      //   age = Number(age);
+        age = Number(age);
 
-      //   console.log(age);
+        console.log(age);
 
-      //   if (age >= 21) {
-      //     console.log = ("You can enter the venue and purchase alcohol.");
-      //   } else if (age >= 19) {
-      //     console.log = ("You can enter the venue but cannot purchase alcohol.");
-      //   } else {
-      //     console.log = ("You cannot enter the venue.");
-      //   }
+        if (age >= 21) {
+          console.log = ("You can enter the venue and purchase alcohol.");
+        } else if (age >= 19) {
+          console.log = ("You can enter the venue but cannot purchase alcohol.");
+        } else {
+          console.log = ("You cannot enter the venue.");
+        }
 
       // Task 2
 
