--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       let birthYear = prompt("Please enter your birth year");
       let currentYear = 2024;
-      let age = currentYear - birthYear;
+      let Age = currentYear - birthYear;
 
       console.log("Your age is: " + age);
 
